--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3 Vite Preview</title>
-</head>
-
-<body>
+    <title>MieAgro</title>
+  </head>
+  <body>
+    <noscript>
+      <strong
+        >We're sorry but website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong
+      >
+    </noscript>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-</body>
-
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
